apps/gatekeeper/base/constraints.yaml
# apiVersion: constraints.gatekeeper.sh/v1beta1
# kind: K8sAllowedRepos
# metadata:
#   name: repo-is-openpolicyagent
# spec:
#   match:
#     kinds:
#       - apiGroups: [""]
#         kinds: ["Pod"]
#     namespaces:
#       - "gatekeeper-system"
#   parameters:
#     repos:
#       - "openpolicyagent/"

# ---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]

---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueIngressHost
metadata:
  name: unique-ingress-host
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
